feat: display extension in the document sidebar (#43)
Refs: #42