@@ -1,48 +1,71 @@
 package ch.sbb.polarion.extension.cucumber;
 
+import ch.sbb.polarion.extension.generic.test_extensions.PlatformContextMockExtension;
+import com.polarion.alm.portal.web.shared.layouts.sections.ExtensionSection;
+import com.polarion.alm.portal.web.shared.layouts.sections.SourceLayout;
+import com.polarion.alm.portal.web.shared.layouts.sections.VerticalSection;
 import com.polarion.alm.projects.model.IProject;
+import com.polarion.alm.server.ServerUiContext;
 import com.polarion.alm.shared.api.SharedContext;
-import com.polarion.alm.shared.api.utils.html.HtmlBuilderTargetSelector;
-import com.polarion.alm.shared.api.utils.html.HtmlFragmentBuilder;
+import com.polarion.alm.shared.api.model.ModelObject;
+import com.polarion.alm.shared.api.model.document.Document;
+import com.polarion.alm.shared.api.transaction.ReadOnlyTransaction;
+import com.polarion.alm.shared.api.transaction.RunnableInReadOnlyTransaction;
+import com.polarion.alm.shared.api.transaction.TransactionalExecutor;
 import com.polarion.alm.tracker.model.IAttachmentBase;
 import com.polarion.alm.tracker.model.ICategory;
+import com.polarion.alm.tracker.model.ITypeOpt;
 import com.polarion.alm.tracker.model.IWorkItem;
+import com.polarion.alm.tracker.web.internal.server.PDIConfigResolver;
+import com.polarion.alm.ui.server.forms.extensions.IFormExtensionContext;
+import com.polarion.alm.ui.server.forms.extensions.impl.FormExtensionContextImpl;
 import com.polarion.platform.persistence.model.IPObject;
 import com.polarion.platform.persistence.spi.PObjectList;
+import com.polarion.subterra.base.data.identification.IContextId;
+import org.apache.commons.io.IOUtils;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
-import org.mockito.Answers;
 import org.mockito.Mock;
+import org.mockito.MockedStatic;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import java.util.stream.Stream;
 
 import static com.polarion.platform.persistence.model.IPObjectList.EMPTY_POBJECTLIST;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.*;
 
-@ExtendWith(MockitoExtension.class)
-@SuppressWarnings("unchecked")
+@ExtendWith({MockitoExtension.class, PlatformContextMockExtension.class})
+@SuppressWarnings({"unchecked", "rawtypes"})
 class CucumberIntegrationFormExtensionTest {
     @Mock
-    CucumberIntegrationFormExtension extension;
-
+    private CucumberIntegrationFormExtension extension;
     @Mock
     private IWorkItem iWorkItem;
-
+    @Mock
+    private IFormExtensionContext formContext;
     @Mock
     private SharedContext context;
     @Mock
-    private HtmlBuilderTargetSelector<HtmlFragmentBuilder> builder;
-    @Mock(answer = Answers.RETURNS_DEEP_STUBS)
-    private HtmlFragmentBuilder htmlFragmentBuilder;
+    private ReadOnlyTransaction transaction;
+    @Mock
+    private SourceLayout layout;
+
+    private MockedStatic<TransactionalExecutor> transactionalExecutor;
+    private MockedStatic<IOUtils> ioUtils;
+    private MockedStatic<PDIConfigResolver> configResolver;
 
     private static Stream<Arguments> testValuesForRenderIntegrationTestIsPersistedIssue() {
 
@@ -50,9 +73,9 @@ class CucumberIntegrationFormExtensionTest {
         var iProject = mock(IProject.class);
 
         return Stream.of(
-                Arguments.of(false, workItem),
-                Arguments.of(true, iProject),
-                Arguments.of(false, iProject)
+                Arguments.of(false, workItem, "Cucumber editor will be available after Work Item created."),
+                Arguments.of(true, iProject, ""),
+                Arguments.of(false, iProject, "")
         );
     }
 
@@ -76,11 +99,38 @@ class CucumberIntegrationFormExtensionTest {
         when(attachment4.getDataStream()).thenReturn(new ByteArrayInputStream("test4".getBytes()));
 
         return Stream.of(
-                Arguments.of(object, new PObjectList(null, Arrays.asList(attachment)), "test"),
-                Arguments.of(object, new PObjectList(null, Arrays.asList(attachment, attachment2)), "test"),
-                Arguments.of(object, new PObjectList(null, Arrays.asList(attachment, attachment2, attachment3)), "test"),
-                Arguments.of(object, new PObjectList(null, Arrays.asList(attachment, attachment4)), "test4")
+                Arguments.of(object, new PObjectList(null, List.of(attachment)), "test"),
+                Arguments.of(object, new PObjectList(null, List.of(attachment, attachment2)), "test"),
+                Arguments.of(object, new PObjectList(null, List.of(attachment, attachment2, attachment3)), "test"),
+                Arguments.of(object, new PObjectList(null, List.of(attachment, attachment4)), "test4")
         );
+    }
+
+    @BeforeEach
+    void setup() {
+        transactionalExecutor = mockStatic(TransactionalExecutor.class);
+        transactionalExecutor.when(() -> TransactionalExecutor.executeSafelyInReadOnlyTransaction(any())).thenAnswer(invocation -> {
+            RunnableInReadOnlyTransaction runnable = invocation.getArgument(0);
+            return runnable.run(transaction);
+        });
+        ioUtils = mockStatic(IOUtils.class);
+        ioUtils.when(() -> IOUtils.resourceToString(eq("layout/form.html"), any(), any()))
+                .thenReturn("{BUNDLE},{PROJECT_ID},{WORK_ITEM_ID},{FILENAME},{VALIDATE},{CONTENT}");
+        ioUtils.when(() -> IOUtils.resourceToString(eq("layout/info.html"), any(), any())).thenReturn("{MESSAGE}");
+        ioUtils.when(() -> IOUtils.resourceToString(eq("layout/error.html"), any(), any())).thenReturn("{MESSAGE}");
+
+        configResolver = mockStatic(PDIConfigResolver.class);
+        configResolver.when(() -> PDIConfigResolver.resolveComplexConfig(anyString(), any(), any(), any(), any()))
+                .thenReturn(layout);
+
+        lenient().when(extension.loadLayout(anyString(), any())).thenCallRealMethod();
+    }
+
+    @AfterEach
+    void cleanup() {
+        transactionalExecutor.close();
+        ioUtils.close();
+        configResolver.close();
     }
 
     @Test
@@ -99,48 +149,62 @@ class CucumberIntegrationFormExtensionTest {
 
     @ParameterizedTest
     @MethodSource("testValuesForRenderIntegrationTestIsPersistedIssue")
-    void renderIntegrationTestIsPersistedIssue(Boolean isPersisted, IPObject object) {
-        when(extension.renderIntegrationTest(context, object, true)).thenCallRealMethod();
-
-        when(context.createHtmlFragmentBuilderFor()).thenReturn(builder);
-        when(builder.gwt()).thenReturn(htmlFragmentBuilder);
-
-        String builderText = "text";
-        when(htmlFragmentBuilder.toString()).thenReturn(builderText);
-        when(htmlFragmentBuilder.tag().div().append().tag().b().append().text(anyString())).thenReturn(htmlFragmentBuilder);
+    void renderIntegrationTestIsPersistedIssue(Boolean isPersisted, IPObject object, String expectedResult) {
+        when(extension.renderIntegrationTest(formContext, context, object, true)).thenCallRealMethod();
 
         when(object.isPersisted()).thenReturn(isPersisted);
 
-        assertThat(extension.renderIntegrationTest(context, object, true)).isEqualTo(builderText);
-
-        verify(extension, times(0)).addSource(eq(htmlFragmentBuilder), eq("text/javascript"), anyString());
-        verify(htmlFragmentBuilder, times(0)).html(anyString());
-        verify(htmlFragmentBuilder, times(1)).finished();
+        assertThat(extension.renderIntegrationTest(formContext, context, object, true)).isEqualTo(expectedResult);
     }
 
     @Test
     void renderIntegrationTestWithProjectAsWorkItem() throws IOException {
         var object = mock(IWorkItem.class);
 
-        when(extension.renderIntegrationTest(context, object, true)).thenCallRealMethod();
+        when(extension.renderIntegrationTest(formContext, context, object, true)).thenCallRealMethod();
 
         when(extension.getContent(object, EMPTY_POBJECTLIST)).thenCallRealMethod();
 
-        when(context.createHtmlFragmentBuilderFor()).thenReturn(builder);
-        when(builder.gwt()).thenReturn(htmlFragmentBuilder);
-
-        String builderText = "text";
-        when(htmlFragmentBuilder.toString()).thenReturn(builderText);
-
+        when(object.getId()).thenReturn("WI-1");
+        when(object.getProjectId()).thenReturn("TestProjectId");
         when(object.isPersisted()).thenReturn(true);
         when(object.getAttachments()).thenReturn(EMPTY_POBJECTLIST);
 
-        assertThat(extension.renderIntegrationTest(context, object, true)).isEqualTo(builderText);
+        assertEquals(",TestProjectId,WI-1,WI-1.feature,true,", extension.renderIntegrationTest(formContext, context, object, true));
+    }
 
-        verify(extension, times(1)).addSource(eq(htmlFragmentBuilder), eq("text/javascript"), anyString());
-        verify(extension, times(1)).addSource(eq(htmlFragmentBuilder), eq("module"), anyString());
-        verify(htmlFragmentBuilder, times(5)).html(anyString());
-        verify(htmlFragmentBuilder, times(1)).finished();
+    @Test
+    void renderDocumentSidebarFormDependingOnWorkItemType() throws IOException {
+        var object = mock(IWorkItem.class);
+
+        when(extension.renderIntegrationTest(any(), any(), any(), anyBoolean())).thenCallRealMethod();
+
+        when(extension.getContent(object, EMPTY_POBJECTLIST)).thenCallRealMethod();
+
+        when(object.getId()).thenReturn("WI-1");
+        when(object.getType()).thenReturn(mock(ITypeOpt.class));
+        when(object.getContextId()).thenReturn(mock(IContextId.class));
+        when(object.getProjectId()).thenReturn("TestProjectId");
+        when(object.isPersisted()).thenReturn(true);
+        when(object.getAttachments()).thenReturn(EMPTY_POBJECTLIST);
+
+        FormExtensionContextImpl formContextImpl = mock(FormExtensionContextImpl.class, RETURNS_DEEP_STUBS);
+        formContextImpl.contextObject = mock(Document.class, RETURNS_DEEP_STUBS);
+        ServerUiContext sharedContext = mock(ServerUiContext.class, RETURNS_DEEP_STUBS);
+
+        when(sharedContext.currentUiRole()).thenReturn("someRole");
+        VerticalSection verticalSection = mock(VerticalSection.class);
+        when(layout.getRootSection()).thenReturn(verticalSection);
+
+        when(verticalSection.getRows()).thenReturn(new ArrayList<>(List.of()));
+
+        assertEquals("Extension isn't configured for the current work item type.", extension.renderIntegrationTest(formContextImpl, sharedContext, object, true));
+
+        ExtensionSection section = mock(ExtensionSection.class);
+        when(section.getExtenstionId()).thenReturn("cucumber");
+        when(verticalSection.getRows()).thenReturn(new ArrayList<>(List.of(section)));
+
+        assertEquals(",TestProjectId,WI-1,WI-1.feature,true,", extension.renderIntegrationTest(formContextImpl, sharedContext, object, true));
     }
 
     @Test
@@ -158,5 +222,19 @@ class CucumberIntegrationFormExtensionTest {
         when(extension.getContent(object, list)).thenCallRealMethod();
         var result = extension.getContent(object, list);
         assertThat(result).isEqualTo(expected);
+    }
+
+    @Test
+    void testRender() {
+        when(formContext.object()).thenReturn(mock(ModelObject.class, RETURNS_DEEP_STUBS));
+        when(extension.render(any())).thenCallRealMethod();
+
+        when(formContext.attributes()).thenReturn(Map.of("validateOnSave", "true"));
+        extension.render(formContext);
+        verify(extension, times(1)).renderIntegrationTest(any(), any(), any(), eq(true));
+
+        when(formContext.attributes()).thenReturn(Map.of("validateOnSave", "false"));
+        extension.render(formContext);
+        verify(extension, times(1)).renderIntegrationTest(any(), any(), any(), eq(false));
     }
 }
